# minecraft-2d

./: Cargo.toml  README.md  todo.md
src/: block.rs  camera.rs  gamemode.rs  inventory.rs  item.rs  item_kind.rs  main.rs  player.rs  utils.rs  world.rs
