[package]
name = "minecraft-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_rapier2d = "0.22.0"
bracket-noise = "0.8.2"
